origami-engine/tests/trybuild/fail/should_fail_when_html_esape_is_disabled_and_noescape_is_used_in_expr.rs
use origami_engine::comp;

fn main() {
    let expr = "<div></div>";
    comp! {
        foo =>
        div {
            @expr;!
        }
    }
    foo!();
}
